<resources>
    <string name="app_name">MobileAppDesignChallenge</string>
    <string name="signInButtonText">Sign In</string>
    <string name="signUpButtonText">Sign Up</string>
    <string name="contentDescriptionBackgroundImage">background image</string>
    <string name="contentDescriptionLogo">logo</string>
    <string name="signInLabelText">Sign In</string>
    <string name="userName_InputField_Text">User Name</string>
    <string name="password_InputField_Text">Password</string>
    <string name="signUpLabelText">Sign Up</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="menu1">Portfolio</string>
    <string name="menu2">Directory</string>
    <string name="menu3">More</string>
    <string name="address">No 60, Nawam Mawatha, Colombo</string>
    <string name="email">hello@ironone.com</string>
    <string name="telephoneNumber">01123654785</string>
    <string name="view_location">View Location</string>


</resources>
