<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/signin_page_background_design"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.mobileappdesignchallenge.MoreActivity">

    <ImageView
            android:id="@+id/logoMorePage"
            android:layout_width="422dp"
            android:layout_height="329dp"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.736"
            android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/address"
            android:text="@string/address"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/logoMorePage" android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/email"
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_width="234dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.552"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/viewLocationButton"/>

    <TextView
            android:id="@+id/telephoneNumber"
            android:text="@string/telephoneNumber"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/email" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/view_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewLocationButton"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/address" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
