<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/signin_page_background_design"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignInActivity">

    <TextView
            android:id="@+id/signInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signInLabelText"
            android:textSize="42sp"
            android:textColor="#FFF"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.504"/>

    <EditText
            android:id="@+id/userNameEditTextSignInPage"
            android:background="@drawable/input_field_design"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/userName_InputField_Text"
            android:ems="10"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="156dp" app:layout_constraintTop_toBottomOf="@+id/signInTextView"/>

    <EditText
            android:id="@+id/passwordEditTextSignInPage"
            android:background="@drawable/input_field_design"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_InputField_Text"
            android:ems="10"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/userNameEditTextSignInPage"/>

    <Button
            android:id="@+id/signInButtonSignInScreen"
            android:padding="10dp"
            android:background="@drawable/signin_signup_button_design"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:text="@string/signInButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="100dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="68dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTextSignInPage"/>


</androidx.constraintlayout.widget.ConstraintLayout>