<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:id="@+id/backgroundImage"
            android:src="@drawable/background_image"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/contentDescriptionBackgroundImage"/>

    <View
            android:id="@+id/backgroundImageOverlay"
            android:background="@drawable/background_image_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp"/>

    <ImageView
            android:id="@+id/logo"
            android:src="@drawable/logo"
            android:layout_width="840dp"
            android:layout_height="311dp"
            android:layout_marginTop="180dp"
            app:layout_constraintTop_toTopOf="@+id/backgroundImageOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/signInButtonFirstScreen"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_goneMarginTop="8dp"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/contentDescriptionLogo"/>


    <Button
            android:id="@+id/signInButtonFirstScreen"
            android:background="@drawable/signin_signup_button_design"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:text="@string/signInButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="176dp"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundImageOverlay"
            app:layout_constraintHorizontal_bias="0.0"
            />

    <Button
            android:id="@+id/signUpButtonFirstScreen"
            android:padding="10dp"
            android:background="@drawable/signin_signup_button_design"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:text="@string/signUpButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="68dp"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundImageOverlay"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/signInButtonFirstScreen"
            app:layout_constraintVertical_bias="0.392"
            />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>